# MECH352

./: .gitignore  CMakeLists.txt  README.md  my_1.c
CMake/: opengl-toolchain.cmake
helloworld/: CMakeLists.txt  TC-mingw.cmake
helloworld/src/: my_1.c
hw1/: CMakeLists.txt
hw1/src/: main.cpp
my_1c/: CMakeLists.txt
